hphp/hack/test/typecheck/pocket_universes/test_pocket_universes_syntax_attribute.php.exp
File "test_pocket_universes_syntax_attribute.php", line 6, characters 8-8:
This syntax is reserved for the Pocket Universes prototype.
It can only be used in the directories specified by the
  `pocket_universe_enabled_paths = nowhere|everywhere|dir1,..,dirn`
option in .hhconfig (Typing[4369])
File "test_pocket_universes_syntax_attribute.php", line 3, characters 3-6:
This syntax is reserved for the Pocket Universes prototype.
It can only be used in the directories specified by the
  `pocket_universe_enabled_paths = nowhere|everywhere|dir1,..,dirn`
option in .hhconfig (Typing[4369])
File "test_pocket_universes_syntax_attribute.php", line 10, characters 8-8:
This syntax is reserved for the Pocket Universes prototype.
It can only be used in the directories specified by the
  `pocket_universe_enabled_paths = nowhere|everywhere|dir1,..,dirn`
option in .hhconfig (Typing[4369])
